350-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: "blogger.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: blog-service
                port:
                  number: 3000
    - host: "shopping.com"
      http:
        paths:
          - pathType: Prefix
            path: /products
            backend:
              service:
                name: ecom-products-service
                port:
                  number: 3000
          - pathType: Prefix
            path: /cart
            backend:
              service:
                name: ecom-carts-service
                port:
                  number: 3000
